tests/ui/extern/issue-47725.stderr
error[E0539]: malformed `link_name` attribute input
  --> $DIR/issue-47725.rs:17:1
   |
LL | #[link_name]
   | ^^^^^^^^^^^^
   | |
   | expected this to be of the form `link_name = "..."`
   | help: must be of the form: `#[link_name = "name"]`

warning: attribute should be applied to a foreign function or static
  --> $DIR/issue-47725.rs:3:1
   |
LL | #[link_name = "foo"]
   | ^^^^^^^^^^^^^^^^^^^^
...
LL | struct Foo;
   | ----------- not a foreign function or static
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
note: the lint level is defined here
  --> $DIR/issue-47725.rs:1:9
   |
LL | #![warn(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

warning: attribute should be applied to a foreign function or static
  --> $DIR/issue-47725.rs:8:1
   |
LL |   #[link_name = "foobar"]
   |   ^^^^^^^^^^^^^^^^^^^^^^^
...
LL | / extern "C" {
LL | |     fn foo() -> u32;
LL | | }
   | |_- not a foreign function or static
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
help: try `#[link(name = "foobar")]` instead
  --> $DIR/issue-47725.rs:8:1
   |
LL | #[link_name = "foobar"]
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0539`.
